[package]
authors = ["Wouter Geraedts <git@woutergeraedts.nl>", "Sean Bowe <ewillbefull@gmail.com>"]
description = "Fork of the BLS12-381 pairing-friendly elliptic curve construction for IRMAseal"
documentation = "https://docs.rs/irmaseal-curve/"
homepage = "https://github.com/wassasin/irmaseal-curve"
license = "MIT/Apache-2.0"
name = "irmaseal-curve"
repository = "https://github.com/wassasin/irmaseal-curve"
version = "0.1.1"
edition = "2018"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "groups"
harness = false
required-features = ["groups"]

[dependencies.subtle]
version = "2.2.1"
default-features = false

[features]
default = ["groups", "pairings", "alloc"]
groups = []
pairings = ["groups"]
alloc = []
nightly = ["subtle/nightly"]

# GLV patents US7110538B2 and US7995752B2 expire in September 2020.
endo = []
